fix: Increase z-index of user message to ensure it appears above other elements

--- a/src/assets/styles/cmps/UserMsg.scss
+++ b/src/assets/styles/cmps/UserMsg.scss
@@ -1,6 +1,6 @@
 .user-msg {
     position: absolute;
-    z-index: 1000;
+    z-index: 9999;
     top: 4vh;
     left: 50%;
     transform: translate(-50%, -50%);
